gccida/c2/insn_dead_p
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_dead_p/src/flow.c:2510:10: error: conflicting types for 'insn_dead_p'
__int64  insn_dead_p(  struct propagate_block_info *pbi, rtx x, int call_ok, rtx notes) 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_dead_p/src/flow.c:298:12: note: previous declaration is here
static int insn_dead_p                  PARAMS ((struct propagate_block_info *,
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_dead_p/src/flow.c:2522:4: error: expected ';' after expression
rtx v17; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_dead_p/src/flow.c:2522:5: error: use of undeclared identifier 'v17'
rtx v17; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_dead_p/src/flow.c:2523:4: error: expected ';' after expression
rtx mem_set_list; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_dead_p/src/flow.c:2523:5: error: use of undeclared identifier 'mem_set_list'; did you mean 'reg_set_last'?
rtx mem_set_list; // rbx 
    ^~~~~~~~~~~~
    reg_set_last
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_dead_p/src/rtl.h:1485:12: note: 'reg_set_last' declared here
extern rtx reg_set_last                 PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_dead_p/src/flow.c:2524:4: error: expected ';' after expression
rtx v19; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_dead_p/src/flow.c:2524:5: error: use of undeclared identifier 'v19'
rtx v19; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_dead_p/src/flow.c:2556:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v14.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_dead_p/src/flow.c:2565:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v9 = (  struct rtx_def *)x[1]; 
                         ^~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_dead_p/src/flow.c:2583:1: error: use of undeclared identifier 'v17'
v17 = canon_rtx( rtx); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_dead_p/src/flow.c:2584:1: error: use of undeclared identifier 'mem_set_list'
mem_set_list = pbi->mem_set_list; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_dead_p/src/flow.c:2585:6: error: use of undeclared identifier 'mem_set_list'; did you mean 'reg_set_last'?
if ( mem_set_list ) 
     ^~~~~~~~~~~~
     reg_set_last
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_dead_p/src/rtl.h:1485:12: note: 'reg_set_last' declared here
extern rtx reg_set_last                 PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_dead_p/src/flow.c:2587:1: error: use of undeclared identifier 'v19'
v19 = v17; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_dead_p/src/flow.c:2587:7: error: use of undeclared identifier 'v17'
v19 = v17; 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_dead_p/src/flow.c:2590:28: error: use of undeclared identifier 'mem_set_list'
if ( anti_dependence( rtx, mem_set_list->fld[0].rtx) ) 
                           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_dead_p/src/flow.c:2592:24: error: use of undeclared identifier 'mem_set_list'
v23.rtwint = ( __int64)mem_set_list->fld[0]; 
                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_dead_p/src/flow.c:2593:44: error: expected expression
if ( rtx_equal_p( v19->fld[0].rtx, *( rtx *)( v23.rtwint + 8)) ) 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_dead_p/src/flow.c:2593:19: error: use of undeclared identifier 'v19'; did you mean 'v13'?
if ( rtx_equal_p( v19->fld[0].rtx, *( rtx *)( v23.rtwint + 8)) ) 
                  ^~~
                  v13
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_dead_p/src/flow.c:2518:18: note: 'v13' declared here
 struct rtx_def *v13; // rsi 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_dead_p/src/flow.c:2595:39: error: use of undeclared identifier 'v19'
if ( mode_size[*( ( unsigned __int8 *)v19 + 2)] <= mode_size[*( unsigned __int8 *)( v23.rtwint + 2)] ) 
                                      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/insn_dead_p/src/obj/flow.o] Error 1
